add games index and links to edit page

--- a/app/views/admin/games/edit.html.erb
+++ b/app/views/admin/games/edit.html.erb
@@ -27,3 +27,5 @@
 </p>
 
 <% end %>
+
+<%= link_to "Zurück zur Spieleübersicht", games_path %> | <%= link_to "Zurück zum Admin-Panel", admin_root_path %>
