--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -6,6 +6,10 @@
 
 <ul>
   <% @games.each do |game| %>
-    <li><%= link_to game.name, game_path(game) %> | <%= link_to "Bearbeiten", edit_admin_game_path(game) %></li>
+    <li>
+      <%= link_to game.name, game_path(game) %> | 
+      <%= link_to "Bearbeiten", edit_admin_game_path(game) %> | 
+      <%= link_to "Spiel löschen", admin_game_path(game), method: :delete, data: {confirm: "Bist Du sicher, dass du #{game.name} löschen willst?"} %>
+    </li>
   <% end %>
 </ul>
