remove redundancies and refactor

--- a/app/views/admin/games/new.html.erb
+++ b/app/views/admin/games/new.html.erb
@@ -1,31 +1,5 @@
 <h1>Neues Spiel hinzufügen</h1>
 
-<% if @game.errors.any? %>
-  <h2>Es sind folgende Fehler aufgetreten:</h2>
-  <ul>
-    <% @game.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-
-<%end %>
-
-<%= form_for [:admin, @game] do |f| %>
-
-<p>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-</p>
-
-<p>
-  <%= f.label :release_germany %>
-  <%= f.date_field :release_germany %>
-</p>
-
-<p>
-  <%= f.submit %>
-</p>
-
-<% end %>
+<%= render 'form' %>
 
 <%= link_to "Zurück zum Admin-Panel", admin_root_path %>
