add usk field to game model and add materialize css and js to the project

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,6 +3,9 @@
 <p>
   Veröffentlichungsdatum in Deutschland: <%= @game.release_germany %>
 </p>
+<p>
+  USK-Einstufung: <%= @game.usk %>
+</p>
 
 <p>
   <%= link_to "#{@game.name} bearbeiten", edit_admin_game_path(@game) %> |
