add preliminary support for gravatar in application helper

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Übersicht aller Games bei IchSpiele</h1>
+<%= render 'shared/page_title', title: "Alle Spiele" %>
 
 <p>
   <%= link_to "Neues Spiel hinzufügen", new_admin_game_path %>
