--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @game.name %></h1>
+<%= render 'shared/page_title', title: @game.name %>
 
 <p>
   Veröffentlichungsdatum in Deutschland: <%= @game.release_germany %>
