add helper to check if user is in admin namespace and add preliminary view for newcreate action of news

--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -1,1 +1,8 @@
 <h1>Admin Panel</h1>
+
+<p>
+  <%= link_to "Spiel hinzufügen", new_admin_game_path %>  
+</p>
+<p>
+  <%= link_to "News hinzufügen", new_admin_news_path %>
+</p>
