--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,16 @@
  */
 
 @import "materialize";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
+body.admin {
+ header, main, footer {
+  padding-left: 300px;
+  }
+  
+  @media only screen and (max-width : 768px) {
+    header, main, footer {
+      padding-left: 0;
+    }
+  } 
+}
