--- a/app/views/admin/news/_form.html.erb
+++ b/app/views/admin/news/_form.html.erb
@@ -1,10 +1,17 @@
 <% if @news.errors.any? %>
-  <h2>Es sind folgende Fehler aufgetreten:</h2>
-  <ul>
-    <% @news.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
+  <div class="card red lighten-4">
+    <div class="card-content">
+      <%= link_to(new_admin_news_url + "/#", html_options = { class: 'right', data: { dismiss: 'card' } }) do %>
+        &#215;
+      <% end %>
+      <h5>Es sind folgende Fehler aufgetreten:</h5>
+      <ul>
+        <% @news.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 <% end %>
 
 <%= form_for [:admin, @news] do |f| %>
