--- a/app/views/admin/news/index.html.erb
+++ b/app/views/admin/news/index.html.erb
@@ -19,12 +19,12 @@
             <%= article.created_at.strftime('%d.%m.%Y') %>
           </td>
           <td>
-            <%= link_to news_path(article) do %>
+            <%= link_to news_path(article), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' } do %>
               <i class="material-icons">open_in_browser</i>
             <% end %>
           </td>
           <td>
-            <%= link_to admin_news_path(article), method: :delete, data: {confirm: "Bist Du sicher, dass du #{article.title} löschen willst?"} do %>
+            <%= link_to admin_news_path(article), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' }, method: :delete, data: {confirm: "Bist Du sicher, dass du #{article.title} löschen willst?"} do %>
               <i class=" material-icons">delete</i>
             <% end %>
           </td>
