add and run migration for missing timestamps in games model

--- a/app/views/layouts/_navigation_admin.html.erb
+++ b/app/views/layouts/_navigation_admin.html.erb
@@ -12,7 +12,7 @@
             <a class="collapsible-header"><%= a.capitalize %><i class="material-icons">subject</i><i class="material-icons right">arrow_drop_down</i></a>
             <div class="collapsible-body">
               <ul>
-                <li><%= link_to 'Übersicht', admin_root_url+"/#{a}/index" %></li>
+                <li><%= link_to 'Übersicht', admin_root_url+"/#{a}/" %></li>
                 <li><%= link_to 'Neu', admin_root_url+"/#{a}/new" %></li>
               </ul>
             </div>
