--- a/app/views/admin/games/index.html.erb
+++ b/app/views/admin/games/index.html.erb
@@ -1,1 +1,34 @@
-<h1>Admin-Panel-Rubrik Spiele</h1>
+<h1>Spiele im Überblick</h1>
+
+<table class="bordered striped highlight responsive-table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Erstellt</th>
+      <th>Ansehen</th>
+      <th>Löschen</th>
+    </tr>
+    </thead>
+    <tbody>
+      <% @games.each do |game| %>
+        <tr>
+          <td>
+            <%= link_to game.name, edit_admin_game_path(game.id) %>
+          </td>
+          <td>
+            <%= game.created_at.strftime('%d.%m.%Y') %>
+          </td>
+          <td>
+            <%= link_to game_path(game), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' } do %>
+              <i class="material-icons">open_in_browser</i>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to admin_game_path(game), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' }, method: :delete, data: {confirm: "Bist Du sicher, dass du #{article.title} löschen willst?"} do %>
+              <i class=" material-icons">delete</i>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+</table>
