optimized flash message css

--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,7 +1,7 @@
 <% if not flash.empty? %>
  <div class="card green lighten-4">
     <div class="card-content">
-      <a href="#" class="close" data-dismiss="card">&#215;</a>
+      <a href="#" class="right" data-dismiss="card">&#215;</a>
       <ul>
       <% flash.each do |name, msg| %>
         <li><%= msg %></li>
