add button styling in new and edit forms

--- a/app/views/admin/news/_form.html.erb
+++ b/app/views/admin/news/_form.html.erb
@@ -29,7 +29,7 @@
 <%= f.hidden_field :user_id %>
 
 <p>
-  <%= f.submit %>
+  <%= f.submit class: "btn waves-effect waves-light purple lighten-1" %>
 </p>
 
 <% end %>
