--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/errors', obj: @user, path: 'pages#signup' %>
+<%= render 'shared/errors', obj: @user, path: 'anmelden_url' %>
 
 <div class="card">
     <div class="card-content">
