remove css class yield in shared page title. correct typo in flash msg for succesful user creation

--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -1,8 +1,8 @@
 <%= render 'shared/errors', obj: @user, path: 'anmelden_url' %>
 
 <div class="card">
-    <div class="card-content">
-      <%= render 'shared/page_title', title: "Anmelden/Registrieren", klasse: "center-align" %>      
+    <div class="card-content center-align">
+      <%= render 'shared/page_title', title: "Anmelden/Registrieren" %>      
     </div>
     <div class="card-tabs">
       <ul class="tabs tabs-fixed-width">
