--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
-<%= render 'shared/page_title', title: "Dein Profil" %>
+<%= render 'shared/page_title', title: "Profil von #{@user.name}" %>
+
+<div>
+  <%= gravatar_for @user, size: '250' %>
+</div>
