change color of navigation and footer to match admin panel's colors

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-fixed">
   <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper purple lighten-1">
       <%= link_to("IchSpiele.cc", root_path, html_options = {class: "brand-logo"}) %>
       <ul class="right">
         <li>Test</li>
