refactor form for user controller's show and edit view.

--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -18,27 +18,7 @@
       </div>
       <div id="registrieren">
         <p>Du möchtest einen Account bei uns? Dann registrier Dich jetzt.</p>
-        <%= form_for @user do |f| %>
-          <p>
-            <%= f.label :name, "Benutzername" %>
-            <%= f.text_field :name %>
-          </p>
-          <p>
-            <%= f.label :email, "E-Mail" %>
-            <%= f.text_field :email %>
-          </p>
-          <p>
-            <%= f.label :password, "Passwort eingeben" %>
-            <%= f.password_field :password %>
-          </p>
-          <p>
-            <%= f.label :password_confirmation, "Passwort wiederholen" %>
-            <%= f.password_field :password_confirmation %>
-          </p>
-          <p>
-            <%= f.submit "Account erstellen", class: "btn waves-effect waves-light purple lighten-1" %>
-          </p>
-        <% end %>
+        <%= render 'users/form' %>
       </div>
     </div>
   </div>
