change admin games controller. correct error with deletion of games.

--- a/app/views/admin/games/_form.html.erb
+++ b/app/views/admin/games/_form.html.erb
@@ -18,7 +18,8 @@
 </p>
 
 <p>
-  <%= f.submit class: "btn waves-effect waves-light purple lighten-1" %>
+  <%= f.submit(@game.new_record? ? "Spiel hinzufügen" : "Spiel aktualisieren",
+                  class: "btn waves-effect waves-light purple lighten-1") %>
 </p>
 
 <% end %>
