--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -19,12 +19,12 @@
             <%= user.created_at.strftime('%d.%m.%Y') %>
           </td>
           <td>
-            <%= link_to users_path(user), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' } do %>
+            <%= link_to user_path(user), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' } do %>
               <i class="material-icons">open_in_browser</i>
             <% end %>
           </td>
           <td>
-            <%= link_to admin_users_path(user), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' }, method: :delete, data: {confirm: "Bist Du sicher, dass du #{user.name} löschen willst?"} do %>
+            <%= link_to admin_user_path(user), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' }, method: :delete, data: {confirm: "Bist Du sicher, dass du #{user.name} löschen willst?"} do %>
               <i class=" material-icons">delete</i>
             <% end %>
           </td>
