change news to articles due to naming conventions with rails and problems with form for helper not producing the proper update path

--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -4,5 +4,5 @@
   <%= link_to "Spiel hinzufügen", new_admin_game_path %>  
 </p>
 <p>
-  <%= link_to "News hinzufügen", new_admin_news_path %>
+  <%= link_to "News hinzufügen", new_admin_article_path %>
 </p>
