--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -10,22 +10,22 @@
     </tr>
     </thead>
     <tbody>
-      <% @news.each do |article| %>
+      <% @articles.each do |article| %>
         <tr>
           <td>
-            <%= link_to article.title, edit_admin_news_path(article.id) %>
+            <%= link_to article.title, edit_admin_article_path(article) %>
           </td>
           <td>
             <%= article.created_at.strftime('%d.%m.%Y') %>
           </td>
           <td>
-            <%= link_to news_path(article), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' } do %>
+            <%= link_to article_path(article), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' } do %>
               <i class="material-icons">open_in_browser</i>
             <% end %>
           </td>
           <td>
-            <%= link_to admin_news_path(article), { :class => 'btn-floating purple lighten-1 waves-effect waves-light' }, method: :delete, data: {confirm: "Bist Du sicher, dass du #{article.title} löschen willst?"} do %>
-              <i class=" material-icons">delete</i>
+            <%= link_to admin_article_path(article), method: :delete, data: { confirm: "Bist Du sicher, dass du #{article.title} löschen willst?" } do %>
+              <span class="btn-floating purple lighten-1 waves-effect waves-light"><i class='material-icons'>delete</i></span>
             <% end %>
           </td>
         </tr>
