--- a/app/views/admin/games/index.html.erb
+++ b/app/views/admin/games/index.html.erb
@@ -13,7 +13,7 @@
       <% @games.each do |game| %>
         <tr>
           <td>
-            <%= link_to game.name, edit_admin_game_path(game.id) %>
+            <%= link_to game.name, edit_admin_game_path(game) %>
           </td>
           <td>
             <%= game.created_at.strftime('%d.%m.%Y') %>
