add admin value to user model. add logged in and admin helpers to application controller. redirect user on homepage either to his profile page or to admin panel, if he is a normal user or an admin user.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body class="<%= 'admin' if admin? %>">
+    <% if !is_admin? %>
+    Ich bin kein Admin-Nutzer
+    <% end %>
+    
     <% if admin? %>
       <%= render 'layouts/navigation_admin' %>
       <main>
