--- a/app/views/layouts/_navigation_admin.html.erb
+++ b/app/views/layouts/_navigation_admin.html.erb
@@ -1,8 +1,8 @@
 <ul id="slide-out" class="side-nav fixed purple lighten-1 grey-text text-lighten-1">
   <li>
     <p class="center">
-      <%= gravatar_for(admin_user, size: 150) %><br>
-      <%= admin_user.name %>
+      <%= gravatar_for(current_user, size: 150) %><br>
+      <%= current_user.name %>
     </p>
   </li>
   <li class="no-padding">
