consolidate error and flash messages. use materialize toasts for flash message output. add preliminary horizontal navigation in admin panel.

--- a/app/views/admin/articles/_form.html.erb
+++ b/app/views/admin/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/errors', obj: @article, path: 'new_admin_articles_url' %>
+<%= render 'shared/errors', obj: @article %>
 
 <%= form_for [:admin, @article] do |f| %>
 
