--- a/app/views/admin/games/_form.html.erb
+++ b/app/views/admin/games/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/errors', obj: @game, path: 'new_admin_games_url' %>
+<%= render 'shared/errors', obj: @game %>
 
 <%= form_for [:admin, @game] do |f| %>
 
