--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,13 @@ body.admin {
   padding-left: 300px;
   }
   
+  header {
+    margin-top: -30px;
+    .nav-wrapper {
+      padding-right: 300px;
+    }
+  }
+  
   @media only screen and (max-width : 768px) {
     header, main, footer {
       padding-left: 0;
