--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,13 @@
+<ul id="dropdown1" class="dropdown-content">
+  <% if logged_in? %>
+    <li><%= link_to "Ausloggen", logout_path, method: :delete %></li>
+  <% else %>
+    <li><%= link_to "Einloggen", login_path %></li>
+  <% end %>
+  <li><a href="#!">two</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">three</a></li>
+</ul>
 <nav>
   <div class="nav-wrapper purple lighten-1">
     <%= link_to("IchSpiele.cc", root_path, html_options = {class: "brand-logo"}) %>
@@ -5,10 +15,16 @@
       <% if is_admin? %>
       <li><%= link_to "Admin", admin_root_path %></li>
       <% end %>
-      <li><%= link_to "Einloggen", login_path %></li>
-      <li><%= link_to "Ausloggen", logout_path, method: :delete %></li>
-      <li>Test</li>
-      <li>Test</li>
+      <li><%= link_to "News", articles_path %></li>
+      <li><%= link_to "Spiele", games_path %></li>
+      <!-- Dropdown Trigger -->
+      <li><a class="dropdown-button" href="#!" data-activates="dropdown1">
+        <% if logged_in? %>
+          <%= gravatar_for(current_user, size: 48) %>
+        <% else %>
+          <i class="material-icons">account_circle</i>
+        <% end %>
+        <i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
   </div>
 </nav>
