just anothert test for slack

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body class="<%= 'admin' if admin? %>">
     <% if !is_admin? %>
-    Ich bin kein Admin-Nutzer test
+    Ich bin kein Admin-Nutzer
     <% end %>
 
     <% if admin? %>
