add preliminary code for gallery without gallery yet. dry exercise.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,20 @@
 <h1>Hello World!</h1>
+
+<h2>Gallery Pre-Test</h2>
+
+<div class="container">
+  <div class="row">
+    <div class="col s2 grey lighten-2 white-text">
+      links
+    </div>
+    <div class="col s8 blue lighten-2 white-text">
+      <div class="gallery-container">
+      hier kommt das bild rein
+    </div>
+    </div>
+    <div class="col s2 green lighten-2 white-text">
+      rechts
+      <%= link_to "inhalt ändern", next_path(), method: :patch, remote: true %>
+    </div>
+  </div>
+</div>
