add preliminary xml file to game model

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,9 +12,9 @@
       hier kommt das bild rein
     </div>
     </div>
-    <div class="col s2 green lighten-2 white-text">
+    <div class="rechts col s2 green lighten-2 white-text">
       rechts
-      <%= link_to "inhalt ändern", next_path(), method: :patch, remote: true %>
+      <%= render partial: "link_rechts" %>
     </div>
   </div>
 </div>
